--- a/iFileManager/res/layout/main.xml
+++ b/iFileManager/res/layout/main.xml
@@ -67,13 +67,15 @@
 			android:src="@drawable/toolbar_settings" />
 	</LinearLayout>
 
-	<ListView
-		android:id="@+id/fileList"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_below="@+id/toolbarLinearLayout"
-		android:layout_centerHorizontal="true" >
-
-	</ListView>
+	<LinearLayout  android:layout_below="@id/toolbarLinearLayout"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="fill_parent" 
+	    android:id="@+id/fListView">	   
+	    <ListView android:id="@android:id/list" 
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content" 
+	        android:longClickable="true" />
+	</LinearLayout >
+	
 
 </RelativeLayout>
